Section_3_K8s_deployments/part_1/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: canary-service
  labels:
    app: canary
    tier: backend
    version: v1

spec: 
  type: ClusterIP
  selector:
    app: canary
    tier: backend
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
